--- a/app/templates/class_select.html
+++ b/app/templates/class_select.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Welcome!</title>
-        <link rel="stylesheet" type="text/css" href="static/style.css">
+        <link rel="stylesheet" type="text/css" href="/static/style.css">
     </head>
     <body>
         <h2>Modifiers</h2>
