--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,17 +11,22 @@
             <datalist id="races">
                 <option value = "Dragonborn">
                 <option value = "Hill Dwarf">
+                <option value = "Wood Elf">
+                <option value = "High Elf">
+                <option value = "Deep Gnome">
+                <option value = "Tiefling">
             </datalist>
             <input list="classes" name="job">
             <datalist id="classes">
                 <option value = "Barbarian">
-                <option value = "Barbarian">
+                <option value = "Bard">
             </datalist>
             <input list="backgrounds" name="background">
             <datalist id="backgrounds">
                 <option value = "Acolyte">
                 <option value = "Acolyte">
             </datalist>
+            <input type="number" name="level" min="1" max="20" />
             <input type="submit" value="Submit"/>
         </form>
     </body>
