--- a/app/static/style.css
+++ b/app/static/style.css
@@ -2,6 +2,10 @@ table {
   border-collapse: collapse;
 }
 
-table, tr, th {
+table, tr, th, td {
   border: 1px solid black;
+}
+
+li {
+  padding-left: 10px;
 }
