--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
                 <option value = "High Elf">
                 <option value = "Deep Gnome">
                 <option value = "Tiefling">
+                <option value = "Half-Orc (Mark of Finding)">
             </datalist>
             <input list="classes" name="job">
             <datalist id="classes">
@@ -23,7 +24,6 @@
             </datalist>
             <input list="backgrounds" name="background">
             <datalist id="backgrounds">
-                <option value = "Acolyte">
                 <option value = "Acolyte">
             </datalist>
             <input type="number" name="level" min="1" max="20" />
