--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>Welcome!</title>
+        <title>DND!</title>
         <link rel="stylesheet" type="text/css" href="static/style.css">
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <p>We can build a full webpage here</p>
+        <h1>THIS WEBSITE HELPS BUILD DND CHARACTERS!</h1>
+        <p>WWOOWOOWOOWWOe</p>
         <form action = '/class_select' method = 'post'>
             <input list="races" name="race">
             <datalist id="races">
